# PhySim

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/law/: CMakeLists.txt  lib.cpp
examples/material/: CMakeLists.txt  lib.cpp
src/: CMakeLists.txt
src/PhySim_LIB/: graph_class.cpp  graph_class.h  physim.hpp
src/PhySim_LIB/addon/: addonheader.hpp  registerDataStructs.hpp
src/PhySim_LIB/dl/: load.hpp
src/PhySim_RUN/: main.cpp
src/PhySim_Test/: main.cpp
tests/: CMakeLists.txt
tests/test_linking/: test.cpp
tests/test_tests/: test.cpp
