add_library(PhySim_LIB SHARED PhySim_LIB/physim.hpp PhySim_LIB/graph_class.cpp PhySim_LIB/graph_class.h)
add_executable(PhySim_RUN PhySim_RUN/main.cpp)
set_target_properties(PhySim_LIB PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(PhySim_RUN PRIVATE PhySim_LIB)
target_compile_definitions(PhySim_LIB PRIVATE CompileToShared)